--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,20 @@
     transform: rotate(360deg);
   }
 }
+
+
+
+.person{
+  background-color: darkkhaki;
+  border: 3px solid rebeccapurple;
+  padding: 20px;
+  margin: 10px;
+  border-radius: 20px;
+}
+.friend{
+  background-color: goldenrod;
+  border: 3px solid blueviolet;
+  padding: 20px;
+  margin: 10px;
+  border-radius: 20px;
+}
